--- a/index.html
+++ b/index.html
@@ -33,10 +33,9 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
 </head>
-  <body class="bg-gray-100">
-    <div id="root"></div>
-  <script type="module" src="/index.tsx"></script>
+<body class="bg-gray-100">
+  <div id="root"></div>
+  <script type="module" src="./index.tsx"></script>
 </body>
 </html>
